kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: kubeflow-self-signing-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: api-service
            port:
              number: 5000
        path: /proxy
        pathType: Prefix
  - http:
      paths:
      - backend:
          service:
            name: web-service
            port:
              number: 80
        path: /
        pathType: Prefix
